Link to uploaded profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ka Yan CHENG"
-  avatar           : "profile.png"
+  avatar           : "propic.jpg"
   bio              : "Economics Ph.D. student at Emory University"
   location         : "Atlanta, GA"
   employer         :
