--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ka Yan CHENG"
 title_separator          : "-"
 name                     : &name "Ka Yan CHENG"
-description              : &description "Economics Ph.D. student at Emory University"
+description              : &description "Economics Ph.D. student" <br> "at Emory University"
 url                      : https://kayancheng.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "kayancheng.github.io"
