--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ka Yan CHENG"
+  name             : "Ka Yan Cheng"
   avatar           : "propic.jpg"
   bio              : "Economics Ph.D. student at Emory University"
   location         : "Atlanta, GA"
